--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <p>Coming soon.</p>
-  <p><a href="mailto:info@fawnboutique.ie">info@fawnboutique.ie</a></p>
+  <p><a href="mailto:info@fawnboutique.ie">Enquiries: info@fawnboutique.ie</a></p>
 </body>
 </html>
