initial commit of page layout/design

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fawn Boutique</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Fawn Boutique, Portumna, Galway.</title>
 </head>
 <body>
-  <p>Coming soon.</p>
-  <p><a href="mailto:info@fawnboutique.ie">Enquiries: info@fawnboutique.ie</a></p>
+
+  <main>
+    <article class="card">
+      <div class="card__content">
+        <h1>Fawn Boutique</h1>
+        <p>St Brendan's Road, Portumna, Co. Galway.</p>
+        <p>by Elinor Smith</p>
+        <img src="logo.jpg" alt="Fawn Boutique, Portumna, Galway">
+        <p>Opening soon ...</p>
+        <p>Contact: <a href="mailto:info@fawnboutique.ie">info@fawnboutique.ie</a></p>
+      </div>
+    </article>
+  </main>
+
 </body>
 </html>
