adds brand colours and theme

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <main>
     <article class="card">
       <div class="card__content">
-        <h1>Fawn Boutique</h1>
+        <img src="assets/logos/logo.png" alt="Fawn Boutique, Portumna, Galway">
+        <h1 class="visually-hidden">Fawn Boutique</h1>
+        <p><em>by Elinor Smith</em></p>
+        <hr>
         <p>St Brendan's Road, Portumna, Co. Galway.</p>
-        <p>by Elinor Smith</p>
-        <img src="logo.jpg" alt="Fawn Boutique, Portumna, Galway">
         <p>Opening soon ...</p>
+        <hr>
         <p>Contact: <a href="mailto:info@fawnboutique.ie">info@fawnboutique.ie</a></p>
       </div>
     </article>
