--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta name="description" content="Fawn Boutique, ladies clothing store in Portumna, Galway." />
   <meta property="og:site_name" content="Fawn Boutique" />
-  <meta property="og:url" content="https://fawn-boutique.ie" />
+  <meta property="og:url" content="https://fawnboutique.ie" />
   <meta property="og:title" content="Fawn Boutique" />
   <meta property="og:description" content="Fawn Boutique, ladies clothing store in Portumna, Galway." />
-  <meta property="og:image" content="https://fawn-boutique.ie/assets/logos/logo.png" />
-  <meta property="og:image:url" content="https://fawn-boutique.ie/assets/logos/logo.png" />
-  <meta property="og:image:secure_url" content="https://fawn-boutique.ie/assets/logos/logo.png" />
+  <meta property="og:image" content="https://fawnboutique.ie/assets/logos/logo.png" />
+  <meta property="og:image:url" content="https://fawnboutique.ie/assets/logos/logo.png" />
+  <meta property="og:image:secure_url" content="https://fawnboutique.ie/assets/logos/logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@markconroy" />
   <meta name="twitter:description" content="Fawn Boutique, ladies clothing store in Portumna, Galway." />
   <meta name="twitter:title" content="Fawn Boutique" />
   <meta name="twitter:creator" content="twitter.com/markconroy" />
-  <meta name="twitter:url" content="https://fawn-boutique.ie" />
-  <meta name="twitter:image" content="https://fawn-boutique.ie/assets/logos/logo.png" />
+  <meta name="twitter:url" content="https://fawnboutique.ie" />
+  <meta name="twitter:image" content="https://fawnboutique.ie/assets/logos/logo.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
