adds open now message

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p><em>by Elinor Smith</em></p>
         <hr>
         <p>St Brendan's Road, Portumna, Co. Galway.</p>
-        <p>Opening soon ...</p>
+        <p><strong>We're open, call in to see us!</strong></p>
         <hr>
         <p>Contact: <a href="mailto:info@fawnboutique.ie">info@fawnboutique.ie</a></p>
       </div>
